// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GestureMeaningDisplay rendert die Overlay-Stile im High-Contrast-Modus visuell konsistent 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#000000",
      "borderColor": "#FFFFFF",
      "borderRadius": 8,
      "borderWidth": 2,
      "padding": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 30,
        "height": 60,
        "justifyContent": "center",
        "marginBottom": 4,
        "width": 60,
      }
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 36,
        }
      }
    >
      🆘
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontSize": 12,
        "marginBottom": 4,
        "textAlign": "center",
      }
    }
  >
    Erkannte Geste
  </Text>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontSize": 18,
        "fontWeight": "bold",
        "marginBottom": 4,
        "textAlign": "center",
      }
    }
  >
    🆘 Hilfe
  </Text>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontSize": 14,
        "textAlign": "center",
      }
    }
  >
    78
    % 
    Sicherheit
  </Text>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#FFFFFF",
        "borderRadius": 8,
        "borderWidth": 1,
        "marginTop": 4,
        "padding": 4,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 10,
          "lineHeight": 14,
          "textAlign": "center",
        }
      }
    >
      Deutliches Hilfesignal mit einer Hand.
    </Text>
    <View
      style={
        {
          "alignSelf": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "marginTop": 4,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 8,
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        COMMUNICATION
      </Text>
    </View>
  </View>
</View>
`;

exports[`GestureMeaningDisplay rendert die Overlay-Stile im Standardmodus visuell konsistent 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(15, 23, 42, 0.85)",
      "borderColor": "transparent",
      "borderRadius": 8,
      "borderWidth": 0,
      "padding": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 30,
        "height": 60,
        "justifyContent": "center",
        "marginBottom": 4,
        "width": 60,
      }
    }
  >
    <Text
      style={
        {
          "color": "#F9FAFB",
          "fontSize": 36,
        }
      }
    >
      🆘
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#E2E8F0",
        "fontSize": 12,
        "marginBottom": 4,
        "textAlign": "center",
      }
    }
  >
    Erkannte Geste
  </Text>
  <Text
    style={
      {
        "color": "#F9FAFB",
        "fontSize": 18,
        "fontWeight": "bold",
        "marginBottom": 4,
        "textAlign": "center",
      }
    }
  >
    🆘 Hilfe
  </Text>
  <Text
    style={
      {
        "color": "#E2E8F0",
        "fontSize": 14,
        "textAlign": "center",
      }
    }
  >
    78
    % 
    Sicherheit
  </Text>
  <View
    style={
      {
        "backgroundColor": "rgba(255, 255, 255, 0.28)",
        "borderColor": "rgba(255, 255, 255, 0.35)",
        "borderRadius": 8,
        "borderWidth": 1,
        "marginTop": 4,
        "padding": 4,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#F9FAFB",
          "fontSize": 10,
          "lineHeight": 14,
          "textAlign": "center",
        }
      }
    >
      Deutliches Hilfesignal mit einer Hand.
    </Text>
    <View
      style={
        {
          "alignSelf": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.85)",
          "borderRadius": 8,
          "marginTop": 4,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "#0F172A",
            "fontSize": 8,
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        COMMUNICATION
      </Text>
    </View>
  </View>
</View>
`;
